Bug fixes layout fixed on tablet

--- a/assets/stylesheets/front/layouts/_wrap.scss
+++ b/assets/stylesheets/front/layouts/_wrap.scss
@@ -279,6 +279,15 @@
             display: inline-block;
         }
     }
+
+    .#{$prefix}-fixed-left,
+     .#{$prefix}-fixed-right {
+        .#{$prefix}-whatsapp,
+        .#{$prefix}-telegram,
+        .#{$prefix}-viber {
+            display: block;
+        }
+     }
 }
 
 @media ( max-width: $mobile ) {
